# Miina-Mahjong

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
docs/: arkkitehtuurikuvaus.md  changelog.md  kaytto-ohje.md  saannot.md  testidokumentti.md  todo.md  tuntikirjanpito.md  vaatimusmaarittely.md
src/: handparser.py  main.py  mainui.py  rules.py  tile.py
src/UI/: gameview.py  ui.py
src/tests/: handparser_test.py  rules_test.py
