[tool.poetry]
name = "miina-mahjong"
version = "0.1.0"
description = ""
authors = ["Jasper Hjorth <jasper.hjorth@gmail.com>"]
readme = "README.md"
packages = [{include = "miina_mahjong"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
pylint = "^2.15.6"
pyqt5 = "^5.15.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
coverage = "^7.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
